<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#696969"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="#ffffffff">
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            app:srcCompat="@drawable/impact" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/username1"
            android:hint="@string/username_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/password1"
            android:inputType="textPassword"
            android:hint="@string/password_title"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:background="#ff3eaff9"
            android:textColor="#ffffff"
            android:text="@string/button_login"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="สมัครสมาชิก?"
        android:textColor="#ffffff"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:textSize="20dp"/>


</RelativeLayout>